# the-cyber-poet

./: README.md  pyproject.toml
tests/: test_chatgpt.py  test_main.py  test_wordpress.py
the_cyber_poet/: main.py
the_cyber_poet/api/: chatgpt.py  wordpress.py
